--- a/emi/emi_refs.bib
+++ b/emi/emi_refs.bib
@@ -75,4 +75,9 @@ noise cancelling, antennas phasing}},
   note = {\url{https://www.wellbrook.uk.com/loopantennas/}}
 }
 
+@misc{ve6ey,
+  title = {{VE6EY - Making it Up Blog}},
+  note = {\url{http://play.fallows.ca/wp/}}
+}
+
 
