--- a/emi/measurement.tex
+++ b/emi/measurement.tex
@@ -1,36 +1,42 @@
 % Title: gl2ps_renderer figure
 % Creator: GL2PS 1.4.2, (C) 1999-2020 C. Geuzaine
 % For: Octave
-% CreationDate: Sat Jun 10 11:07:47 2023
+% CreationDate: Sun Jun 11 08:36:35 2023
 \setlength{\unitlength}{1pt}
 \begin{picture}(0,0)
 \includegraphics[scale=1]{measurement-inc}
 \end{picture}%
 \begin{picture}(300,300)(0,0)
-\fontsize{8}{0}\selectfont\put(39,172.052){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{6}}}}
-\fontsize{8}{0}\selectfont\put(90.6667,172.052){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{8}}}}
-\fontsize{8}{0}\selectfont\put(142.333,172.052){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{10}}}}
-\fontsize{8}{0}\selectfont\put(194,172.052){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{12}}}}
-\fontsize{8}{0}\selectfont\put(245.667,172.052){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{14}}}}
-\fontsize{8}{0}\selectfont\put(36.4026,175.967){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-120}}}}
-\fontsize{8}{0}\selectfont\put(36.4026,195.417){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-110}}}}
-\fontsize{8}{0}\selectfont\put(36.4026,214.867){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-100}}}}
-\fontsize{8}{0}\selectfont\put(36.4026,234.317){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-90}}}}
-\fontsize{8}{0}\selectfont\put(36.4026,253.767){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-80}}}}
-\fontsize{8}{0}\selectfont\put(36.4026,273.217){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-70}}}}
-\fontsize{8}{0}\selectfont\put(155.25,162.052){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{Freq (MHz)}}}}
-\fontsize{8}{0}\selectfont\put(20.4026,224.592){\rotatebox{90}{\makebox(0,0)[b]{\textcolor[rgb]{0.15,0.15,0.15}{{dBm (3kHz)}}}}}
-\fontsize{8}{0}\selectfont\put(39,29.0854){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{6}}}}
-\fontsize{8}{0}\selectfont\put(90.6667,29.0854){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{8}}}}
-\fontsize{8}{0}\selectfont\put(142.333,29.0854){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{10}}}}
-\fontsize{8}{0}\selectfont\put(194,29.0854){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{12}}}}
-\fontsize{8}{0}\selectfont\put(245.667,29.0854){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{14}}}}
-\fontsize{8}{0}\selectfont\put(36.4026,33){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-150}}}}
-\fontsize{8}{0}\selectfont\put(36.4026,57.3125){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-140}}}}
-\fontsize{8}{0}\selectfont\put(36.4026,81.625){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-130}}}}
-\fontsize{8}{0}\selectfont\put(36.4026,105.938){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-120}}}}
-\fontsize{8}{0}\selectfont\put(36.4026,130.25){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-110}}}}
-\fontsize{8}{0}\selectfont\put(155.25,19.0854){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{Freq (MHz)}}}}
-\fontsize{8}{0}\selectfont\put(20.4026,81.625){\rotatebox{90}{\makebox(0,0)[b]{\textcolor[rgb]{0.15,0.15,0.15}{{dBm/Hz}}}}}
-\fontsize{8}{0}\selectfont\put(224.495,115.245){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{P.372 residential}}}}
+\fontsize{8}{0}\selectfont\put(39,167.904){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{6}}}}
+\fontsize{8}{0}\selectfont\put(90.6667,167.904){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{8}}}}
+\fontsize{8}{0}\selectfont\put(142.333,167.904){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{10}}}}
+\fontsize{8}{0}\selectfont\put(194,167.904){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{12}}}}
+\fontsize{8}{0}\selectfont\put(245.667,167.904){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{14}}}}
+\fontsize{8}{0}\selectfont\put(34.8441,174.167){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-120}}}}
+\fontsize{8}{0}\selectfont\put(34.8441,193.617){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-110}}}}
+\fontsize{8}{0}\selectfont\put(34.8441,213.067){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-100}}}}
+\fontsize{8}{0}\selectfont\put(34.8441,232.517){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-90}}}}
+\fontsize{8}{0}\selectfont\put(34.8441,251.967){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-80}}}}
+\fontsize{8}{0}\selectfont\put(34.8441,271.417){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-70}}}}
+\fontsize{9}{0}\selectfont\put(155.25,155.904){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{Freq (MHz)}}}}
+\fontsize{9}{0}\selectfont\put(11.8441,222.792){\rotatebox{90}{\makebox(0,0)[b]{\textcolor[rgb]{0.15,0.15,0.15}{{dBm (3kHz)}}}}}
+\fontsize{8}{0}\selectfont\put(75.1667,238.974){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{A}}}}
+\fontsize{8}{0}\selectfont\put(258.583,205.044){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{B}}}}
+\fontsize{8}{0}\selectfont\put(258.583,238.138){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{C}}}}
+\fontsize{8}{0}\selectfont\put(39,26.7366){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{6}}}}
+\fontsize{8}{0}\selectfont\put(90.6667,26.7366){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{8}}}}
+\fontsize{8}{0}\selectfont\put(142.333,26.7366){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{10}}}}
+\fontsize{8}{0}\selectfont\put(194,26.7366){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{12}}}}
+\fontsize{8}{0}\selectfont\put(245.667,26.7366){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{14}}}}
+\fontsize{8}{0}\selectfont\put(34.8441,33){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-150}}}}
+\fontsize{8}{0}\selectfont\put(34.8441,57.3125){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-140}}}}
+\fontsize{8}{0}\selectfont\put(34.8441,81.625){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-130}}}}
+\fontsize{8}{0}\selectfont\put(34.8441,105.938){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-120}}}}
+\fontsize{8}{0}\selectfont\put(34.8441,130.25){\makebox(0,0)[r]{\textcolor[rgb]{0.15,0.15,0.15}{{-110}}}}
+\fontsize{9}{0}\selectfont\put(155.25,14.7366){\makebox(0,0)[t]{\textcolor[rgb]{0.15,0.15,0.15}{{Freq (MHz)}}}}
+\fontsize{9}{0}\selectfont\put(11.8441,81.625){\rotatebox{90}{\makebox(0,0)[b]{\textcolor[rgb]{0.15,0.15,0.15}{{dBm/Hz}}}}}
+\fontsize{8}{0}\selectfont\put(75.1667,102.409){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{A}}}}
+\fontsize{8}{0}\selectfont\put(258.583,59.9961){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{B}}}}
+\fontsize{8}{0}\selectfont\put(258.583,101.364){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{C}}}}
+\fontsize{7}{0}\selectfont\put(201.495,114.245){\makebox(0,0)[l]{\textcolor[rgb]{0,0,0}{{P.372 Residential}}}}
 \end{picture}
