--- a/emi/emi.tex
+++ b/emi/emi.tex
@@ -492,7 +492,60 @@ Loop Antenna, different positions
 
 \subsection{Observations}
 
-Figure of experimental setup
+\begin{figure}[h]
+\caption{Experimental set up for second set of measurements.  The oscilliscope enables the noise to be observed in the time and frequenmcy domain.  The 7 MHz Band Pass Filter (BPF) removes the strong broadcast signals, making the oscilliscope more useful.}
+\label{fig:meas_config_2}
+\begin{center}
+\begin{tikzpicture}
+
+% antenna
+\draw (1,3) -- (2.0,3) -- (1.5,2.5) -- (1,3);
+\draw (1.5,2.5) -- (1.5,2);
+\draw (1.5,2) -- (2.5,2);
+
+% loop antenna
+\draw (1.5,0.5) circle (0.5);
+\draw (2,0.5) -- (2.5,0.5);
+
+% BPF
+\draw (3,1) -- (3,1.5);
+\draw (2.5,0) rectangle (3.5,1);
+\node[align=center] at (3,0.5) {BPF};
+
+% switch
+\draw (2.7,1.7) -- (3.2,2) -- (4,2);
+
+% first splitter
+\draw (4,1.5) rectangle (5,2.5);
+\draw (4,1.5) -- (5,2.5);
+\draw (4,2.5) -- (5,1.5);
+\draw (5,2) -- (5.5,2);
+
+% second splitter
+\draw (5.5,1.5) rectangle (6.5,2.5);
+\draw (5.5,1.5) -- (6.5,2.5);
+\draw (5.5,2.5) -- (6.5,1.5);
+
+% Rx
+\draw (4.5,1.5) -- (4.5,1);
+\draw (4,0) rectangle (5,1);
+\node[align=center] at (4.5,0.5) {Rx};
+
+% spec-an
+\draw (6.5,2) -- (7,2);
+\draw (7,1.5) rectangle (9,2.5);
+\node[align=center] at (8,2) {Spec-an};
+
+% scope
+\draw (6,1.5) -- (6,0.5);
+\draw (6,0.5) -- (7,0.5);
+\draw (7,0) rectangle (9,1);
+\node[align=center] at (8,0.5) {Scope};
+
+\end{tikzpicture}
+\end{center}
+\end{figure}
+
 
 \subsection{Noise D}
 
